# c_raytracer

./: CMakeLists.txt
include/: config.h  hitinfo.h  ray.h  vec3.h
src/: hitinfo.c  main.c  ray.c  vec3.c
